menu (2.1.12) unstable; urgency=low

  * Jens Arvidsson:
    - Updated Swedish menu messages translation. 
  * Morten Brix Pedersen:
    - Fix bug where section="/" failed when translations were enabled.
      Closes: #243531.
  * The "unreleased" release.
  * Fix typo in Chinese menu sections translation.  Closes: #242742. Thanks
    Carlos Z.F. Liu.
  * Update Catalan menu sections translation. Thanks Jordi Mallach.
  * Rename --menufiledir to --menufilesdir as documented. Update translations
    accordingly. Closes: #241289. Thanks Jean-Luc Coulon.

 -- Bill Allombert <ballombe@debian.org>  Fri,  9 Apr 2004 18:26:14 +0200

menu (2.1.11) unstable; urgency=low

  * The "Go bravely with Joey" release. 
  * Morten Brix Pedersen:
    - Only enable translated section names when both 'outputencoding' and
      'repeat_lang' has been set.
    - Set repeat_lang="LOCALE" per default. menu-methods now only need to set
      outputencoding in order to enable translations. 
    - Update Danish menu translation.
    - Fixed some inconsistent behaviour with "substitute section->section"
      Closes: #216851. Thanks Jean-Philippe Guérard.
    - Fix compilation with g++ 2.95.
  * su-to-root:
    + New -X for need=X11 entries that support for gksu and kdesu.
      Closes: #166844. Thanks Jason Hildebrand.
    + Handle usage by root more sanely.
    + update manpage.
  * debian/control: 
    + Suggest gksu|kdebase-bin. Install one of those if su-to-root cannot
      access the X server. Closes: #150314. Thanks Raoul Borenius.
  * Update Brazillian menu messages translation. Thanks André Luís Lopes. 
  * Add Norwegian nynorsk menu messages and sections translations. 
    Thanks Håvard Korsvoll.
  * Add Swedish menu messages and sections translation. Thanks Jens Arvidsson.
  * Update Spanish menu sections translation and add Spanish menu messages
    translation. Thanks Javier Fernandez-Sanguino Peña.
  * Update Japanese menu sections translation and add Japanese menu messages