@@ -1,5 +1,5 @@
-MOs = da.mo es.mo fi.mo fr.mo ja.mo nl.mo nn.mo pl.mo pt_BR.mo sv.mo zh_CN.mo
-POs = da.po es.po fi.po fr.po ja.po nl.po nn.po pl.po pt_BR.po sv.po zh_CN.po
+MOs = da.mo es.mo fi.mo fr.mo ja.mo nl.mo nn.mo pl.mo pt_BR.mo sv.mo tr.po zh_CN.mo
+POs = da.po es.po fi.po fr.po ja.po nl.po nn.po pl.po pt_BR.po sv.po tr.po zh_CN.po
 localedir = $(datadir)/locale
 
 EXTRA_DIST = $(POs)
