@@ -1,13 +1,15 @@
 menu (2.1.12) unstable; urgency=low
 
+  * The "unreleased" release.
   * Jens Arvidsson:
     - Updated Swedish menu messages translation. 
   * Morten Brix Pedersen:
     - Fix bug where section="/" failed when translations were enabled.
       Closes: #243531.
-  * The "unreleased" release.
   * Fix typo in Chinese menu sections translation.  Closes: #242742. Thanks
     Carlos Z.F. Liu.
+  * Add Turkish translations of menu messages and menu sections. 
+    Closes: #243690. Thanks Cagatay Tengiz and Recai Oktas.
   * Update Catalan menu sections translation. Thanks Jordi Mallach.
   * Rename --menufiledir to --menufilesdir as documented. Update translations
     accordingly. Closes: #241289. Thanks Jean-Luc Coulon.
